<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mein kleiner Einkaufshelfer</string>

    <string name="action_save">Ändern</string>
    <string name="button_new">Anlegen</string>
    <string name="action_delete">Löschen</string>
    <string name="button_register">Anmelden</string>
    <string name="button_cancel">Abbrechen</string>

    <string name="editLabel_item_product">Produkt:</string>
    <string name="editLabel_item_market">Markt:</string>
    <string name="editLabel_item_description">Beschreibung:</string>
    <string name="editLabel_item_permanent">Dauereintrag</string>
    <string name="editLabel_item_from">Von:</string>
    <string name="editLabel_item_to">Bis:</string>
    <string name="editLabel_item_category">Gruppe:</string>

    <string name="switch_off">Nein</string>
    <string name="switch_on">Ja</string>

    <string name="datepicker_cancel">Löschen</string>
    <string name="datepicker_ok">Übernehmen</string>

    <string name="editLabel_market_name">Name des Marktes:</string>

    <string name="dialog_register_label">Anmeldeinformationen:</string>
    <string name="dialog_register_hint">Benutzerkennung eingeben</string>

    <string name="editSelect_item_nomarket">(Egal)</string>
    <string name="editSelect_item_nobuy">(nicht eingekauft)</string>

    <string name="action_new">Neu</string>
    <string name="action_sync">Abgleich</string>
    <string name="action_logon">Anmelden</string>
    <string name="action_sortmarket">Gruppieren</string>
    <string name="action_category">Gruppenfilter</string>
    <string name="action_copy_category">Gruppe übernehmen</string>

    <string name="product_prefix_market">%2$s: %1$s</string>
    <string name="product_suffix_bought">%1$s (bei %2$s)</string>

    <string name="market_list_forBuy">Gekauft bei</string>
    <string name="market_list_forEdit">Bevorzugter Markt</string>

    <string name="market_edit_modify">Marktdaten ändern</string>
    <string name="market_edit_create">Markt anlegen</string>

    <string name="product_edit_modify">Produktdaten ändern</string>
    <string name="product_edit_create">Produkt anlegen</string>

    <string name="error_title_rest">Web Zugriff</string>
    <string name="error_sync">Zurzeit ist eine Synchronisation leider nicht möglich.</string>
    <string name="error_ok">Schade</string>

    <string name="group_title">Gruppe auswählen</string>
    <string name="group_no_group">(ohne Gruppe)</string>
</resources>
